[gd_scene load_steps=11 format=2]

[ext_resource path="res://image/enemy_1_canon.png" type="Texture" id=1]
[ext_resource path="res://image/enemy_1_body.png" type="Texture" id=2]
[ext_resource path="res://scene/Enemy_A.gd" type="Script" id=3]
[ext_resource path="res://scene/EnmBullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/Explosion2.tscn" type="PackedScene" id=5]
[ext_resource path="res://sound/punch.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 10.6667

[sub_resource type="CircleShape2D" id=2]
radius = 10.6667

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion2:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 144.014

[node name="Enemy_A" type="KinematicBody2D" groups=[
"enemy",
]]
scale = Vector2( 3, 3 )
collision_layer = 256
collision_mask = 129
script = ExtResource( 3 )
Bullet = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( -1.33333, 0 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bom = SubResource( 3 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Canon" type="Sprite" parent="."]
position = Vector2( -10, 0 )
texture = ExtResource( 1 )
offset = Vector2( 7.33333, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="Explosion2" parent="." instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.552941 )
amount = 61
lifetime = 0.7

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
pitch_scale = 3.04

[connection signal="area_entered" from="DamageArea" to="." method="_on_DamageArea_area_entered"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
